build/log/idf_py_stdout_output_4835
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/leena/drivers/esp32-suspension/build/bootloader && /home/leena/.espressif/python_env/idf6.1_py3.12_env/bin/python /home/leena/drivers/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/leena/drivers/esp32-suspension/build/bootloader/bootloader.bin
Bootloader binary size 0x6650 bytes. 0x9b0 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/leena/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"03af8a9f\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/leena/drivers/esp32-suspension/build/config -I/home/leena/drivers/esp32-suspension/main -I/home/leena/drivers/esp-idf/components/esp_libc/platform_include -I/home/leena/drivers/esp-idf/components/freertos/config/include -I/home/leena/drivers/esp-idf/components/freertos/config/include/freertos -I/home/leena/drivers/esp-idf/components/freertos/config/xtensa/include -I/home/leena/drivers/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/leena/drivers/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/leena/drivers/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/leena/drivers/esp-idf/components/freertos/esp_additions/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/include/soc -I/home/leena/drivers/esp-idf/components/esp_hw_support/ldo/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/debug_probe/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/etm/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/power_supply/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/modem/include -I/home/leena/drivers/esp-idf/components/esp_hw_support/port/esp32/. -I/home/leena/drivers/esp-idf/components/esp_hw_support/port/esp32/include -I/home/leena/drivers/esp-idf/components/heap/include -I/home/leena/drivers/esp-idf/components/heap/tlsf -I/home/leena/drivers/esp-idf/components/log/include -I/home/leena/drivers/esp-idf/components/soc/include -I/home/leena/drivers/esp-idf/components/soc/esp32 -I/home/leena/drivers/esp-idf/components/soc/esp32/include -I/home/leena/drivers/esp-idf/components/soc/esp32/register -I/home/leena/drivers/esp-idf/components/hal/platform_port/include -I/home/leena/drivers/esp-idf/components/hal/esp32/include -I/home/leena/drivers/esp-idf/components/hal/include -I/home/leena/drivers/esp-idf/components/esp_rom/include -I/home/leena/drivers/esp-idf/components/esp_rom/esp32/include -I/home/leena/drivers/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/leena/drivers/esp-idf/components/esp_rom/esp32 -I/home/leena/drivers/esp-idf/components/esp_common/include -I/home/leena/drivers/esp-idf/components/esp_system/include -I/home/leena/drivers/esp-idf/components/esp_system/port/soc -I/home/leena/drivers/esp-idf/components/esp_system/port/include/private -I/home/leena/drivers/esp-idf/components/esp_stdio/include -I/home/leena/drivers/esp-idf/components/xtensa/esp32/include -I/home/leena/drivers/esp-idf/components/xtensa/include -I/home/leena/drivers/esp-idf/components/xtensa/deprecated_include -I/home/leena/drivers/esp-idf/components/esp_hal_gpio/include -I/home/leena/drivers/esp-idf/components/esp_hal_gpio/esp32/include -I/home/leena/drivers/esp-idf/components/esp_hal_usb/include -I/home/leena/drivers/esp-idf/components/esp_hal_pmu/include -I/home/leena/drivers/esp-idf/components/esp_hal_pmu/esp32/include -I/home/leena/drivers/esp-idf/components/esp_hal_regi2c/include -I/home/leena/drivers/esp-idf/components/esp_hal_regi2c/esp32/include -I/home/leena/drivers/esp-idf/components/esp_hal_ana_conv/include -I/home/leena/drivers/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/leena/drivers/esp-idf/components/esp_hal_dma/include -I/home/leena/drivers/esp-idf/components/esp_hal_i2s/include -I/home/leena/drivers/esp-idf/components/esp_hal_i2s/esp32/include -I/home/leena/drivers/esp-idf/components/lwip/include -I/home/leena/drivers/esp-idf/components/lwip/include/apps -I/home/leena/drivers/esp-idf/components/lwip/lwip/src/include -I/home/leena/drivers/esp-idf/components/lwip/port/include -I/home/leena/drivers/esp-idf/components/lwip/port/freertos/include -I/home/leena/drivers/esp-idf/components/lwip/port/esp32xx/include -I/home/leena/drivers/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/leena/drivers/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/leena/drivers/esp-idf/components/esp_timer/include -I/home/leena/drivers/esp-idf/components/esp_driver_ledc/include -I/home/leena/drivers/esp-idf/components/esp_hal_ledc/include -I/home/leena/drivers/esp-idf/components/esp_hal_ledc/esp32/include -I/home/leena/drivers/esp-idf/components/esp_driver_i2c/include -I/home/leena/drivers/esp-idf/components/esp_hal_i2c/esp32/include -I/home/leena/drivers/esp-idf/components/esp_hal_i2c/include -I/home/leena/drivers/esp-idf/components/esp_driver_uart/include -I/home/leena/drivers/esp-idf/components/esp_hal_uart/include -I/home/leena/drivers/esp-idf/components/esp_hal_uart/esp32/include -I/home/leena/drivers/esp-idf/components/vfs/include -I/home/leena/drivers/esp-idf/components/esp_driver_gpio/include @"/home/leena/drivers/esp32-suspension/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/leena/drivers/esp32-suspension=. -fmacro-prefix-map=/home/leena/drivers/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/leena/drivers/esp32-suspension/main/main.c
/home/leena/drivers/esp32-suspension/main/main.c: In function 'suspension_pid_task':
/home/leena/drivers/esp32-suspension/main/main.c:118:13: error: 'integral' undeclared (first use in this function)
  118 |             integral = 0.0f;
      |             ^~~~~~~~
/home/leena/drivers/esp32-suspension/main/main.c:118:13: note: each undeclared identifier is reported only once for each function it appears in
/home/leena/drivers/esp32-suspension/main/main.c:119:13: error: 'prev_error' undeclared (first use in this function); did you mean 'perror'?
  119 |             prev_error = 0.0f;
      |             ^~~~~~~~~~
      |             perror
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
